attempts to fix body splitting on iphone

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,7 +10,7 @@ body {
   @include background;
   background: $primary-color;
   color: set-text-color($primary-color);
-  height: 100vh;
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
